[package]
name = "test-contract"
version = "0.1.0"
authors = ["Liu-Cheng Xu <xuliuchengxlc@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.3"
log = "0.4"
reqwest = "0.9.5"
serde_json = "1.0"
serde_derive = "1.0"
parity-codec = "3.0"

substrate = { path = "../" }
node-cli = { path = "../node/cli" }
node-primitives = { path = "../node/primitives" }
node-runtime = { path = "../node/runtime" }

substrate-primitives = { path = "../core/primitives" }

srml-balances = { path = "../srml/balances" }
srml-system = { path = "../srml/system" }
srml-support = { path = "../srml/support" }
srml-contracts = { path = "../srml/contracts" }
srml-indices = { path = "../srml/indices" }


sr-primitives = { path = "../core/sr-primitives", default-features = false }
