[package]
name = "substrate-rpc"
version = "2.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
error-chain = "0.12"
jsonrpc-core = "10.0.1"
jsonrpc-pubsub = "10.0.1"
jsonrpc-derive = "10.0.2"
log = "0.4"
parking_lot = "0.7.1"
parity-codec = "3.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
client = { package = "substrate-client", path = "../../core/client" }
substrate-executor = { path = "../../core/executor" }
network = { package = "substrate-network", path = "../../core/network" }
primitives = { package = "substrate-primitives", path = "../../core/primitives" }
state_machine = { package = "substrate-state-machine", path = "../../core/state-machine" }
transaction_pool = { package = "substrate-transaction-pool", path = "../../core/transaction-pool" }
runtime_primitives = { package = "sr-primitives", path = "../../core/sr-primitives" }
runtime_version = { package = "sr-version", path = "../../core/sr-version" }
tokio = "0.1.7"

[dev-dependencies]
assert_matches = "1.1"
futures = "0.1.17"
sr-io = { path = "../../core/sr-io" }
test_client = { package = "substrate-test-client", path = "../../core/test-client" }
test_runtime = { package = "substrate-test-runtime", path = "../../core/test-runtime" }
consensus = { package = "substrate-consensus-common", path = "../../core/consensus/common" }
rustc-hex = "2.0"
