[package]
name = "srml-support"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]

[dependencies]
hex-literal = { version = "0.1.0", optional = true }
serde = { version = "1.0", default-features = false }
serde_derive = { version = "1.0", optional = true }
parity-codec = { version = "2.1", default-features = false }
srml-metadata = { path = "../metadata", default-features = false }
sr-std = { path = "../../core/sr-std", default-features = false }
sr-io = { path = "../../core/sr-io", default-features = false }
sr-primitives = { path = "../../core/sr-primitives", default-features = false }
srml-support-procedural = { path = "./procedural" }
mashup = "0.1.7"

redis = { version = "0.9.0", optional = true }
lru = { version = "0.1.11", optional = true }
lazy_static = { version = "1.0", optional = true }
parking_lot = { version = "*", optional = true }

[dev-dependencies]
pretty_assertions = "0.5.1"
parity-codec-derive = { version = "2.1" }

[features]
default = ["std"]
std = [
	"hex-literal",
	"serde/std",
	"serde_derive",
	"sr-io/std",
	"parity-codec/std",
	"sr-std/std",
	"sr-primitives/std",
	"srml-metadata/std",
]

msgbus-redis = [
    "redis",
    "lazy_static",
    "parking_lot",
]
msgbus-redis-keyhash = []

cache-lru = [
    "lru",
    "lazy_static",
]

nightly = []
strict = []
