[package]
name = "srml-support"
version = "1.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
hex-literal = { version = "0.1.0", optional = true }
serde = { version = "1.0", optional = true, features = ["derive"] }
parity-codec = { version = "3.5.1", default-features = false, features = ["derive"] }
srml-metadata = { path = "../metadata", default-features = false }
sr-std = { path = "../../core/sr-std", default-features = false }
runtime_io = { package = "sr-io", path = "../../core/sr-io", default-features = false }
sr-primitives = { path = "../../core/sr-primitives", default-features = false }
inherents = { package = "substrate-inherents", path = "../../core/inherents", default-features = false }
srml-support-procedural = { path = "./procedural" }
paste = "0.1"
once_cell = { version = "0.1.6", default-features = false, optional = true }
bitmask = { version = "0.5", default-features = false }

redis = { version = "0.9.0", optional = true }
lru = { version = "0.1.11", optional = true }
lazy_static = { version = "1.0", optional = true }
parking_lot = { version = "*", optional = true }
log = { version = "0.4", optional = true }

[dev-dependencies]
pretty_assertions = "0.6.1"

[features]
default = ["std"]
std = [
	"hex-literal",
	"once_cell",
	"bitmask/std",
	"serde",
	"runtime_io/std",
	"parity-codec/std",
	"sr-std/std",
	"sr-primitives/std",
	"srml-metadata/std",
	"inherents/std",
]
nightly = []
strict = []

blocknumber = [ ]
msgbus-redis = [
	"blocknumber",
	"redis",
	"lazy_static",
	"parking_lot",
	"log",
]
msgbus-redis-keyhash = [
	"msgbus-redis"
]
cache-lru = [
	"blocknumber",
	"lru",
	"lazy_static",
]
